# landtable

./: .gitignore  .pre-commit-config.yaml  README.md  example_database.json  example_op.json  example_table.json  example_workspace.json  fmt.sh  landtable.toml  pyproject.toml  wak.toml  write_examples.fish
db/: landtable.kdl  landtable.toml
db/tables/: people.kdl
docs/: README.md
landtable/: __init__.py  __main__.py  exceptions.py  identifiers.py  tracing.py
landtable/api/: __init__.py  common.py  legacy.py  transactions.py
landtable/auth/: __init__.py
landtable/backends/: __init__.py  abstract.py  abstract.pyi  postgres_backend.py
landtable/config/: KDLConfig.py
landtable/formula/: exceptions.py  formula.py  lexer.py  parse.py
landtable/formula/sql/: __init__.py  functions.py
landtable/state/: __init__.py  models.py
